Fixed dispalying calendar and weather on mobile devices

--- a/NarwianskiZakatek/wwwroot/css/calendar.css
+++ b/NarwianskiZakatek/wwwroot/css/calendar.css
@@ -21,40 +21,44 @@
 }
 
 #calendar_container {
-    width: 392px;
+    width: 100%;
 }
 
 #weekdays {
     width: 100%;
-    display: flex;
+    display: grid;
+    grid-template-columns: auto auto auto auto auto auto auto;
+    column-gap: 6px;
     font-weight: 400;
     font-size: large;
     color: #ffffff;
+    padding: 6px;
 }
 
     #weekdays div {
-        width: 56px;
-        padding: 6px;
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
     }
 
 #calendar {
     width: 100%;
     margin: auto;
-    display: flex;
-    flex-wrap: wrap;
+    display: grid;
+    grid-template-columns: auto auto auto auto auto auto auto;
+    column-gap: 6px;
+    row-gap: 6px;
+    padding: 6px;
 }
 
 .day {
-    width: 50px;
     padding: 6px;
-    height: 50px;
     box-sizing: border-box;
     background-color: white;
-    margin: 3px;
     box-shadow: 0px 0px 3px #CBD4C2;
     display: flex;
     flex-direction: row;
-    justify-content: right;
+    justify-content: center;
     border-radius: 3px;
 }
 
